--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "type": "module",
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^16.11.11"
+    "@types/node": "^16.11.11",
+    "ts-node": "^10.4.0"
   }
 }
